--- a/css/index.css
+++ b/css/index.css
@@ -502,6 +502,12 @@ body:not(.user-is-tabbing) a:focus {
     }
 }
 
+@media (max-width: 768px) {
+    header p {
+       text-align: center;
+    }
+}
+
 /* --------------------------------------- */
 /* ----- Work ----- */
 /* --------------------------------------- */
